--- a/planner.html
+++ b/planner.html
@@ -36,6 +36,12 @@
                     <option value="5">Hard</option>
                 </select>
             </div>
+            
+            <div class="input-group">
+                <label for="pdf-file-input">Attach File (Optional)</label>
+                <input type="file" id="pdf-file-input" accept=".pdf"> 
+            </div>
+            
             <button id="add-task-btn" title="Add task"><i class="fa-solid fa-plus"></i> Add</button>
         </div>
 
