--- a/index_html.html
+++ b/index_html.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - AI Planner</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <!-- Correct file names -->
+    <link rel="stylesheet" href="style_css.css">
     <link rel="stylesheet" href="login_css.css">
 </head>
 <body>
@@ -42,6 +44,7 @@
         </div>
     </div>
 
+    <!-- Correct JS filename -->
     <script src="login_js.js"></script>
 </body>
 </html>
