--- a/planner_html.html
+++ b/planner_html.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Academic Planner</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- ✅ Correct CSS file name -->
+    <link rel="stylesheet" href="style_css.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -17,6 +20,11 @@
                 <button id="logout-btn"><i class="fa-solid fa-right-from-bracket"></i> Logout</button>
             </div>
             <p>Enter your tasks and let the AI build your smart study schedule!</p>
+
+            <!-- ⭐ Optional: Quick link to Ultra Planner -->
+            <p style="margin-top:10px;">
+                <a href="main_app_html.html">✨ Go to Ultra Planner</a>
+            </p>
         </header>
 
         <div class="input-section">
@@ -63,6 +71,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- ✅ Correct JS file name -->
+    <script src="script_js.js"></script>
 </body>
 </html>
